--- a/service/collector/src/main/resources/application-local.yaml
+++ b/service/collector/src/main/resources/application-local.yaml
@@ -22,39 +22,39 @@ glemoa:
       lookback-minutes: 1440 # cron 분 마다 게시글을 업데이트 및 둘러보는 시간
       initial-crawl-days: 30
       restart-crawl-minutes: 1440
-      enabled: true
+      enabled: false
     - name: bobaedreamCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 1440
-      enabled: true
+      enabled: false
     - name: clienCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 1440
-      enabled: true
+      enabled: false
     - name: dcInsideCrawler
       cron: "0 */5 * * * *"  # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 1440
-      enabled: true
+      enabled: false
     - name: etolandCrawler
       cron: "0 */5 * * * *"    # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 1440
-      enabled: true
+      enabled: false
     - name: fmkoreaCrawler
       cron: "0 */5 * * * *"  # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 1440
-      enabled: true
+      enabled: false
     - name: humorunivCrawler
-      cron: "0 */5 * * * *" # 5분마다
+      cron: "0 */1 * * * *" # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 1440
@@ -64,34 +64,34 @@ glemoa:
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 1440
-      enabled: true
+      enabled: false
     - name: mlbparkCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 1440
-      enabled: true
+      enabled: false
     - name: natePannCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 1440
-      enabled: true
+      enabled: false
     - name: ppomppuCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 1440
-      enabled: true
+      enabled: false
     - name: ruliwebCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 1440
-      enabled: true
+      enabled: false
     - name: theqooCrawler
       cron: "0 */5 * * * *"  # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 1440
-      enabled: true
+      enabled: false
