--- a/service/collector/src/main/resources/application-prod.yaml
+++ b/service/collector/src/main/resources/application-prod.yaml
@@ -97,6 +97,7 @@ glemoa:
       enabled: true
 
 logging:
+  config: classpath:logback-prod.xml
   level:
     # 기본 레벨을 INFO로 유지 (기타 라이브러리)
     root: INFO
