--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -90,15 +90,14 @@ jobs:
             sleep 5
 
             echo "Starting new process..."
+            
+            export ELASTICSEARCH_HOST='${{ secrets.ELASTICSEARCH_HOST }}'
+            export DB_HOST='${{ secrets.DB_HOST }}'
+            export DB_USERNAME='${{ secrets.DB_USERNAME }}'
+            export DB_PASSWORD='${{ secrets.DB_PASSWORD }}'
+            
             nohup java -jar \
               -Dspring.profiles.active=prod \
-              -Dspring.datasource.url=jdbc:mysql://${{ secrets.DB_HOST }}:3306/Glemoa \
-              -Dspring.datasource.username='${{ secrets.DB_USERNAME }}' \
-              -Dspring.datasource.password='${{ secrets.DB_PASSWORD }}' \
-              -Dspring.data.elasticsearch.client.nodes='${{ secrets.ELASTICSEARCH_HOST }}:9200' \
-              -Dspring.data.elasticsearch.client.restclient.use-ssl=false \
-              -Dspring.data.elasticsearch.client.restclient.verify-certs=false \
-              -Dserver.ssl.enabled=false \
               "$JAR_NAME" > collector.log 2>&1 < /dev/null &
 
             sleep 5
