--- a/service/collector/build.gradle
+++ b/service/collector/build.gradle
@@ -11,6 +11,10 @@ plugins {
     id 'org.springframework.boot'
 }
 
+ext {
+    set('springCloudVersion', "2025.0.0")
+}
+
 dependencies {
     // Jsoup 라이브러리
     implementation 'org.jsoup:jsoup:1.14.3'
@@ -24,6 +28,16 @@ dependencies {
     implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
     // 엘라스틱 서치 라이브러리
     implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
+    //	eureka client 의존성 추가
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    //	msa간의 통신을 하기 위한 openfeign 의존성 추가
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
 
 bootJar {
